--- a/src/views/_shared/field.html
+++ b/src/views/_shared/field.html
@@ -1,5 +1,5 @@
 {% macro field(name, value, type, label, isChecked = false) %}
-  <div class="mt-4 flex">
+  <div class="mt-4 flex gap-4">
     <label for="{{ name }}" class="flex-1 max-w-1/2">
       {{ label }}
     </label>
