--- a/src/views/timeSlot/copy.html
+++ b/src/views/timeSlot/copy.html
@@ -1,5 +1,6 @@
 {% extends "../_shared/_layout.html" %}
 {% from "../_shared/field.html" import field %}
+{% from "../_shared/formErrors.html" import formErrors %}
 
 {% set title = "Copy Time Slots" %}
 
@@ -8,7 +9,8 @@
 {% block content %}
   <h1 class="text-4xl mt-8 font-bold">{{ title }}</h1>
   <form method="post" class="mt-8 max-w-lg">
-    <fieldset>
+    {{ formErrors(model.errors) }}
+    <fieldset class="mt-8">
       <legend class="text-2xl font-bold">From</legend>
       {{ field("fromStartDate", model.fromStartDateString, "date", "Start date") }}
       {{ field("fromEndDate", model.fromEndDateString, "date", "End date") }}
