Style copy preview form

--- a/src/views/schedule/week.html
+++ b/src/views/schedule/week.html
@@ -60,10 +60,10 @@
                 {{ formatDate(data) }}
               </h2>
               <div class="mt-4 flex justify-start gap-4">
-                <a href="/schedule/copy/{{ formatDate(data, '/') }}/to/{{ formatDate(data, '/') }}/" class="block p-2 border rounded">
+                <a href="/schedule/copy/{{ formatDate(data, '/') }}/through/{{ formatDate(data, '/') }}/" class="block p-2 border rounded">
                   Copy
                 </a>
-                <a href="/schedule/clear/{{ formatDate(data, '/') }}/to/{{ formatDate(data, '/') }}/" class="block p-2 border rounded">
+                <a href="/schedule/clear/{{ formatDate(data, '/') }}/through/{{ formatDate(data, '/') }}/" class="block p-2 border rounded">
                   Clear
                 </a>
               </div>
