--- a/src/views/timeSlot/assigneeRecommendations.html
+++ b/src/views/timeSlot/assigneeRecommendations.html
@@ -16,12 +16,13 @@
   <thead>
     <tr class="border-b">
       <td class="p-2"></td>
-      <td class="p-2">Team Member</td>
+      <td class="p-2">Team member</td>
       <td class="p-2">Adult</td>
       <td class="p-2">Typically available</td>
       <td class="p-2">Not marked unavailable</td>
       <td class="p-2">Prefer</td>
-      <td class="p-2">No Conflicts</td>
+      <td class="p-2">No conflicts</td>
+      <td class="p-2">Not external</td>
     </tr>
   </thead>
   <tbody>
@@ -51,6 +52,9 @@
         </td>
         <td class="p-2">
           {{ symbols[recommendation.isConflicting] }}
+        </td>
+        <td class="p-2">
+          {{ symbols["negative"] if recommendation.teamMember.isExternal else symbols["positive"] }}
         </td>
       </tr>
     {% endfor %}
