Add time slot possibility links

--- a/src/views/_shared/_layout.html
+++ b/src/views/_shared/_layout.html
@@ -1,5 +1,6 @@
 {% from "./csrf.html" import csrf %}
 {% from "./formatDate.html" import formatDate %}
+{% from "./formatTime.html" import formatTime %}
 {% from "./inlineStyles.html" import inlineStyles %}
 
 <!DOCTYPE html>
