--- a/src/views/timeSlot/edit.html
+++ b/src/views/timeSlot/edit.html
@@ -1,6 +1,6 @@
 {% extends "../_shared/_layout.html" %}
 {% from "../_shared/formErrors.html" import formErrors %}
-{% from "../_shared/field.html" import field with context %}
+{% from "../_shared/field.html" import field %}
 
 {% if model.isEdit %}
   {% set title = 'Edit Time Slot' %}
@@ -15,9 +15,7 @@
 {% block scripts %}
   <script>
     document.addEventListener("DOMContentLoaded", (event) => {
-      const form = document.querySelector("form");
-      const slot = document.querySelector("#recommendations");
-      form.addEventListener("input", async (event) => {
+      document.querySelector("form").addEventListener("input", async (event) => {
         // Do not fetch recommendations again if only the selected team member changed
         if (event.target.name == "teamMemberId") return;
 
@@ -26,7 +24,7 @@
             method: "POST",
             body: new FormData(form)
           });
-          slot.innerHTML = await response.text();
+          document.querySelector("#recommendations").innerHTML = await response.text();
         } catch (e) {
           console.log(e);
         }
@@ -41,7 +39,7 @@
     {{ formErrors(model.errors) }}
     <h2 class="mt-4 text-2xl font-bold">Basic</h2>
     <div class="max-w-lg">
-      <div class="mt-8 flex">
+      <div class="mt-8 flex gap-4">
         <label for="shiftContextId" class="flex-1">
           Shift Context
         </label>
@@ -57,14 +55,7 @@
       {{ field("date", model.timeSlot.startDateString, "date", "Date") }}
       {{ field("startTime", model.timeSlot.startTimeString, "time", "Start time") }}
       {{ field("endTime", model.timeSlot.endTimeString, "time", "End time") }}
-      <div class="mt-4 flex">
-        <label for="requiresAdult" class="flex-1">
-          Requires adult
-        </label>
-        <div class="flex-1">
-          <input type="checkbox" name="requiresAdult" {{ "checked" if model.timeSlot.requiresAdult }} />
-        </div>
-      </div>
+      {{ field("requiresAdult", "", "checkbox", "Requires adult", model.timeSlot.requiresAdult) }}
     </div>
     <div class="mt-8">
       <h2 class="text-2xl font-bold">Assignee</h2>
